--- a/scss/_collections.scss
+++ b/scss/_collections.scss
@@ -423,6 +423,10 @@
     }
 }
 
+#myChart {
+    border: 1px solid #c1d6e2;
+}
+
 .collection-bid {
     text-align: center;
 
