--- a/scss/_dark.scss
+++ b/scss/_dark.scss
@@ -445,6 +445,11 @@
         }
     }
 
+    #myChart {
+        background-color: #151D2E;
+        border: none;
+    }
+
     &.events-page {
 
         .filter-events {
